@@ -15,14 +15,12 @@ class ApplicationController < ActionController::Base
   
   #----------------------------------------------------------------------------
   def current_user_session
-    @current_user_session = Authentication.find unless @current_user_session
-    @current_user_session
+    @current_user_session ||= Authentication.find
   end
   
   #----------------------------------------------------------------------------
   def current_user
-    @current_user = current_user_session && current_user_session.record unless @current_user
-    @current_user
+    @current_user ||= (current_user_session && current_user_session.record)
   end
   
   #----------------------------------------------------------------------------
